--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-.App {
+.extension-app {
   color: white;
   text-align: center;
 }
 
-.containerrr {
+.orb-container {
   width: 400px;
   height: 100%;
   position: fixed;
