--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,4 @@
-.extension-app {
-  color: white;
-  text-align: center;
-}
+@import "./components";
 
 .orb-container {
   width: 400px;
@@ -10,6 +7,6 @@
   top: 0px;
   right: 0px;
   z-index: 9999;
-  background-color: red;
+  background-color: white;
   box-shadow: 0px 0px 5px #0000009e;
 }
